--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "rsuite": "^5.74.1",
